--- a/config/apache2.conf
+++ b/config/apache2.conf
@@ -1,6 +1,6 @@
 [program:apache2]
 command=/usr/local/bin/apache2-foreground
 autostart=true
-autorestart=true
+autorestart=false
 startretries=1
 startsecs=0
