--- a/config/cron.conf
+++ b/config/cron.conf
@@ -1,4 +1,5 @@
-[program:crond]
- command = /usr/sbin/cron
- user = root
- autostart = true
+[program:cron]
+command = /usr/sbin/cron -f -L 15
+user = root
+autostart = true
+autorestart = true
