--- a/config/apache2.conf
+++ b/config/apache2.conf
@@ -1,3 +1,5 @@
 [program:apache2]
-command=/usr/local/bin/apache2-foreground
+command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
+stdout_events_enabled=true
+stderr_events_enabled=true
 autostart=true
