--- a/config/cron.conf
+++ b/config/cron.conf
@@ -1,5 +1,6 @@
 [program:cron]
 command = /usr/sbin/cron -f -L 15
-user = root
+stdout_events_enabled=true
+stderr_events_enabled=true
 autostart = true
 autorestart = true
