--- a/config/supervisorctl.conf
+++ b/config/supervisorctl.conf
@@ -2,6 +2,10 @@
 file = /tmp/supervisor.sock
 chmod = 0777
 chown= nobody:nogroup
+username = local
+password = local
 
 [supervisorctl]
 serverurl = unix:///tmp/supervisor.sock
+username = local
+password = local
