--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,5 +1,11 @@
 [supervisord]
 nodaemon=true
+pidfile=/var/run/supervisord.pid
+logfile=/dev/null
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [include]
 files = /etc/supervisor/conf.d/*.conf
